PYTHON3-EXIV2

Change in 0.1.0  mon, 26 jan 2015
 * First stable release