@@ -1,4 +1,7 @@
 PYTHON3-EXIV2
 
-Change in 0.1.0  mon, 26 jan 2015
+Change in 0.2.0  Fri, 12 Aug 2016
+ * Add Preview.data feature
+
+Change in 0.1.0  Mon, 26 Jan 2015
  * First stable release
